Create email announce fff connect template
Create email announce fff connect template

--- a/Artywiz/announce-fff-connect.html
+++ b/Artywiz/announce-fff-connect.html
@@ -69,7 +69,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
         <table class="full" bgcolor="#FFFFFF" align="center" width="100%" border="0" cellspacing="0" cellpadding="0">
             <tr>
                 <td align="center" bgcolor="#787878"
-                    background="https://res.cloudinary.com/dw1zug8d6/image/upload/v1627268659/communication/header-communication-high-res-lgef.png"
+                    background="https://res.cloudinary.com/dw1zug8d6/image/upload/v1694102260/email/announce-fff-connect/header-announce-fff-connect.png"
                     style="background-size:cover; background-position:center;">
                     <table align="center" border="0" cellpadding="0" cellspacing="0">
                         <tr>
@@ -262,22 +262,24 @@ u + .body .full { width:100% !important; width:100vw !important;}
                             </td>
                         </tr>
                         <tr>
-                            <td height="50"></td>
+                            <td height="40"></td>
                         </tr>
                         <tr>
                             <td>
                                 <multi label="content">
-                                    <p align="center" style="font-family: Roboto; font-size: 28px; color: #4A4A4A; text-transform: uppercase; font-weight: bold; margin: 0;">
+                                    <p align="center" style="color: #000; text-align: center; font-family: Ubuntu; font-size: 24px; font-style: normal; font-weight: 700; line-height: normal; text-transform: uppercase; margin: 0; margin-bottom: 15px;">
                                         COMMUNICATION DE MATCHS
                                     </p>
-                                    <p align="center" style="font-family: Roboto; font-size: 13px; color: #979797; line-height: 20px; margin: 15px 0 0;">
+                                    <p align="center" style="color: #5A5A5A; font-family: Roboto; font-size: 18px; font-style: normal; font-weight: 400; line-height: normal; margin: 15px 0 0;">
+                                        <b>NOUVEAU : connectez ARTYWIZ à votre compte club FFF, et importez automatiquement les données de vos matchs!</b>
+                                        <br><br>
                                         Un exemple de thématique proposée sur ARTYWIZ Football, la communication autour des matchs de vos équipes. Vous y trouverez - bien sûr - les annonces de matchs et les communications des résultats, en mode match ou listes de matchs, mais aussi des supports de communication pour les pronostics, les compositions d’équipes, l’annonce des buts et bien d’autres encore!
                                     </p>
                                 </multi>
                             </td>
                         </tr>
                         <tr>
-                            <td height="70"></td>
+                            <td height="37"></td>
                         </tr>
                     </table>
                 </td>
@@ -301,7 +303,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--icon-->
                                     <tr>
                                         <td align="center" bgcolor="#F8D02F" style="line-height:0px;">
-                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1691078055/email/Ateliers/1-Annonces-de-matchs-new.jpg" alt=""
+                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1694102425/email/announce-fff-connect/annonces-de-matchs.jpg" alt=""
                                                 width="100%"
                                                 style="display:block;line-height:0px; font-size:0px; border:0px;"
                                                 editable label="image" />
@@ -350,7 +352,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1645427827/email/Ateliers/2-Liste-de-r%C3%A9sultats.png" alt="" width="183"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1694102674/email/announce-fff-connect/liste-de-resultats.jpg" alt="" width="183"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -383,7 +385,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1645427845/email/Ateliers/3-LE-GROUPE-DU-MATCH.png" alt="" width="183"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1694102787/email/announce-fff-connect/le-groupe-du-match.jpg" alt="" width="183"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -430,7 +432,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--icon-->
                                     <tr>
                                         <td align="center" bgcolor="#F8D02F" style="line-height:0px;">
-                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1645427853/email/Ateliers/4-composition-d_%C3%A9quipe.png" alt=""
+                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1694102826/email/announce-fff-connect/composition-dequipe.jpg" alt=""
                                                 width="100%"
                                                 style="display:block;line-height:0px; font-size:0px; border:0px;"
                                                 editable label="image" />
@@ -479,7 +481,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1645427857/email/Ateliers/5-ANNONCER-UN-BUT.png" alt="" width="183"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1694102830/email/announce-fff-connect/annoncer-un-but.jpg" alt="" width="183"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -512,7 +514,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1645427862/email/Ateliers/6-VOS-PRONOSTICS.png" alt="" width="183"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1694102895/email/announce-fff-connect/vos-pronostics.jpg" alt="" width="183"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -559,7 +561,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1645427868/email/Ateliers/7-L_HOMME-DU-MATCH.png" alt="" width="183"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1694102950/email/announce-fff-connect/lhomme-du-match.jpg" alt="" width="183"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -592,7 +594,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1645427873/email/Ateliers/8-programme-de-la-semaine.png" alt="" width="183"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1694102984/email/announce-fff-connect/programme-de-la-semaine.jpg" alt="" width="183"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
                                                 editable label="image" /></td>
                                     </tr>
