create new template email for auto generate document
create new template email for auto generate document

--- a/Artywiz/announce-fff-connect.html
+++ b/Artywiz/announce-fff-connect.html
@@ -138,7 +138,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         <td
                                             style="font-family: Ubuntu; font-size:26px; color:#FFFFFF;font-weight: bold; text-transform: uppercase;">
                                             <multi label="headline">
-                                                <p align="center" style="line-height: 30px; margin-top: 26px;">Communiquez <br>autour des matchs <br>de vos équipes</p>
+                                                <p align="center" style="line-height: 30px; margin-top: 26px;">Vos affiches de matchs <br>en 10 secondes chrono, <br>avec Artywiz football <br>et la LGEF</p>
                                             </multi>
                                         </td>
                                     </tr>
@@ -162,7 +162,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         <td
                                             style="font-family: Ubuntu; font-size: 14px; color:#FFFFFF;font-weight: normal;">
                                             <multi label="headline">
-                                                <p align="center" style="line-height: 16px; margin: 0;">C’EST SIMPLE, RAPIDE ET GRATUIT...</p>
+                                                <p align="center" style="line-height: 16px; margin: 0;">IMPORTEZ VOS DONNÉES DE MATCHS FFF EN 1 CLIC</p>
                                             </multi>
                                         </td>
                                     </tr>
@@ -303,7 +303,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--icon-->
                                     <tr>
                                         <td align="center" bgcolor="#F8D02F" style="line-height:0px;">
-                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1694102425/email/announce-fff-connect/annonces-de-matchs.jpg" alt=""
+                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1694438755/email/announce-fff-connect/annonces-de-matchs-new.png" alt=""
                                                 width="100%"
                                                 style="display:block;line-height:0px; font-size:0px; border:0px;"
                                                 editable label="image" />
@@ -1402,7 +1402,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr>
                                         <td align="center"
                                             style="font-family: Roboto; font-size:13px; line-height: 20px; color:#FFFFFF;">
-                                            <single label="title">Copyright ©2021 Artywiz. Tous droits réservés.</single>
+                                            <single label="title">Copyright ©2023 Artywiz. Tous droits réservés.</single>
                                         </td>
                                     </tr>
                                     <!--end title-->
