--- a/Laforet/new-post.html
+++ b/Laforet/new-post.html
@@ -201,7 +201,7 @@
                                     <table width="280" border="0" cellspacing="0" cellpadding="0">
                                         <tbody>
                                             <tr>
-                                                <td align="center"><a href="#"
+                                                <td align="center"><a href="https://www.laforetdesdefis.fr/email-new-post?title={{POSTTITLE}}&email={{subscriber.email}}&link={{post.link_only}}" target="_blank"
                                                         style="text-align: center; color: #676767; font-size: 0.9em; font-family: 'Signika', sans-serif; letter-spacing: 0.2px; line-height: 140%;">
                                                         Afficher la version Web </a></td>
                                                 <td align="center"
