Replace banner with animation banner laforet new post email
Replace banner with animation banner laforet new post email

--- a/Laforet/new-post.html
+++ b/Laforet/new-post.html
@@ -50,9 +50,9 @@
                                                         style="font-size: 1.2em; font-weight: bold; color: #424242; line-height: 21px; font-family: 'Signika', sans-serif; padding: 15px 40px 0px 40px; margin: 0 0 10px;">
                                                         Bonjour ,</p>
                                                     <p
-                                                        style="font-size: 1em; color: #676767; line-height: 21px; font-family: 'Signika', sans-serif; padding: 15px 40px 0px 40px; margin: 0 0 10px;">
-                                                        Un nouvel article a été publié sur le site « la forêt des défis
-                                                        » : <br />{{POSTTITLE}}</p>
+                                                        style="font-size: 1em; color: #676767; line-height: 21px; font-family: 'Signika', sans-serif; padding: 15px 40px 0px 40px; margin: 0 0 5px;">
+                                                        Un nouvel article a été publié sur le site « la forêt des défis » :</p>
+                                                    <h2 style="font-size: 1.5em; color: #676767; line-height: 120%; font-family: 'Signika', sans-serif; padding: 0px 40px 0px 40px; margin: 0 0 10px;">{{POSTTITLE}}</h2>
                                                     <p
                                                         style="font-size: 1em; color: #676767; line-height: 21px; font-family: 'Signika', sans-serif; margin-bottom: 0px; padding-top: 15px; padding-right: 40px; padding-left: 40px; margin: 0 0 5px;">
                                                         Vous pouvez y accéder en cliquant sur le lien suivant :</p>
@@ -124,7 +124,7 @@
                                             <tr>
                                                 <td>
                                                     <center><img width="100%"
-                                                            src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1718874440/laforet/Facebook_Cover_-_Tapafaim_1.png"
+                                                            src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1718958415/laforet/laforet-animation-banner.gif"
                                                             alt="" /></center>
                                                 </td>
                                             </tr>
