Add new template
Add new template

--- a/Artywiz/animez-la-communication.html
+++ b/Artywiz/animez-la-communication.html
@@ -1,4 +1,4 @@
-<!-- Email object :  Animez les communautés de votre club et de vos équipes! -->
+<!-- Email object :  Faites vibrer votre communauté avec nos modèles de contenu social ! -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
