Change coupon expiry date variable
Change coupon expiry date variable

--- a/kautzmann/offer-a-unique.html
+++ b/kautzmann/offer-a-unique.html
@@ -119,7 +119,7 @@
                                                                     Parce que nous aimerions vraiment vous faire plaisir, voici une <b>remise de 5 %</b> à utiliser sur votre panier abandonné. <br><br>
                                                                     
                                                                     🎁 Votre code exclusif : <b>{{cart.coupon_code}}</b> <br>
-                                                                    👉 Valable jusqu’à [date/heure limite]. <br><br>
+                                                                    👉 Valable jusqu’à {{coupon.expiry_date}}. <br><br>
                                                                     
                                                                     Cliquez vite pour profiter de cette offre avant qu’elle ne disparaisse : <br>
                                                                     <a style="color: inherit; text-decoration: none;" href="{{cart.checkout_url}}" target="_blank">[Finaliser ma commande avec -5 %]</a> <br><br>
