Change title and sub title on the third email of abandoned cart
Change title and sub title on the third email of abandoned cart

--- a/kautzmann/offer-a-unique.html
+++ b/kautzmann/offer-a-unique.html
@@ -68,7 +68,7 @@
                                                         <tbody>
                                                             <tr>
                                                                 <td align="center" style="background-image: url('https://res.cloudinary.com/dw1zug8d6/image/upload/v1733295893/kautzmann/gradient-bg.png'); background-size: cover; background-repeat: no-repeat; border-radius: 60px;">
-                                                                    <h1 style="font-family: 'Epilogue'; font-style: normal; font-weight: 700; font-size: 48px; line-height: 49px; text-align: center; text-transform: uppercase; color: #FFFFFF; margin: 40px 0 0px; padding: 0 40px;">72 heures après l’abandon du panier</h1>
+                                                                    <h1 style="font-family: 'Epilogue'; font-style: normal; font-weight: 700; font-size: 48px; line-height: 49px; text-align: center; text-transform: uppercase; color: #FFFFFF; margin: 40px 0 0px; padding: 0 40px;">Une petite douceur pour vous décider…</h1>
                                                                     <h3 style="font-family: 'Epilogue';
                                                                     font-style: normal;
                                                                     font-weight: 400;
@@ -78,7 +78,7 @@
                                                                     text-transform: uppercase;
                                                                     color: #FFFFFF;
                                                                     margin: 10px 0 0;
-                                                                    padding: 0 40px;">Une petite douceur pour vous décider... -5% sur votre panier !</h3>
+                                                                    padding: 0 40px;">-5% sur votre panier!</h3>
                                                                     <img width="260" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1733393293/kautzmann/like-thumb.png" alt="">
                                                                 </td>
                                                             </tr>
